fix navbar jumps when using hash links

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@
     }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   position: relative;
   margin: auto;
